<resources>
    <string name="app_name">Ticket To Ride Scoreboard</string>
    <string name="startingPlayersTxt">"Enter number of players"</string>
    <string name="startingTrainsTxt">"Enter number of starting trains"</string>
    <string name="startingStationsTxt">"Enter number of starting stations"</string>
    <string name="playTrainBtn">"PLAYED - TRAINS"</string>
    <string name="playStnBtn">"PLAYED - STATION"</string>
    <string name="pickupRoutesBtn">"PICKUP - ROUTE CARDS"</string>
    <string name="pickupTrainsBtn">"PICKUP - TRAIN CARDS"</string>
    <string name="pickupBtnAlternate">"Next player"</string>
    <string name="endGameBtn">"END GAME"</string>
    <string name="selectActionTxt">"SELECT PLAYER %1$d ACTION"</string>
    <string name="scoreTxt">"SCORE : "</string>
    <string name="trainsTxt">"TRAINS : "</string>
    <string name="stationsTxt">"STATIONS : "</string>
    <string name="playedTrainsTitle">"Select route length"</string>
    <string name="playedTrainsDialogBtn">"TRAINS : %1$d (SCORE : %2$2d)"</string>
    <string name="actionBarSettings">Settings</string>
    <string name="actionBarSummary">Summary</string>
    <string name="actionBarUndo">Undo</string>
    <string name="actionBarRedo">Redo</string>
    <string name="actionBarEditPlayer">Edit Player Info</string>
    <string name="actionBarNewGame">New Game</string>
    <string name="actionBarNewGameDialog">"Exit current game?"</string>
    <string name="summaryDialogTitle">"Summary"</string>
    <string name="summaryDialogTableHeadingName">"Name"</string>
    <string name="summaryDialogTableHeadingScore">"Score"</string>
    <string name="summaryDialogTableHeadingTrains">"Trains"</string>
    <string name="summaryDialogTableHeadingStations">"Stations"</string>
    <string name="endGameActivityTitle">"Enter route scores"</string>
    <string name="endGameActivityRouteScoreHint">"Enter route card value"</string>
    <string name="endGameActivityCompleteBtn">"Completed route (+)"</string>
    <string name="endGameActivityIncompleteBtn">"Incomplete route (-)"</string>
    <string name="endGameActivityNextPlayerBtn">"Next player"</string>
    <string name="endGameActivityFinished">"Show final score sheet"</string>
    <string name="endGameTableTitle">"Score Breakdown"</string>
    <string name="endGameTableHeadingTrainScore">"Trains"</string>
    <string name="endGameTableHeadingStationScore">"Stations"</string>
    <string name="endGameTableHeadingRouteScore">"Routes"</string>
    <string name="endGameTableHeadingTotalScore">"Total"</string>
    <string name="endGameActivityFinishedDialog">"Remember to add any special cards (e.g. longest route) as completed routes"</string>
    <string name="scoreSheetTitle">"Final score sheet"</string>
    <string name="scoreSheetTableHeadingNames">Name</string>
    <string name="scoreSheetTableHeadingScore">Score</string>
    <string name="scoreSheetTableHeadingTrains">Trains</string>
    <string name="scoreSheetTableHeadingStations">Stations</string>
    <string name="scoreSheetTableHeadingCards">Cards</string>
    <string name="scoreSheetTableHeadingTotal">Total</string>
    <string name="settingsToggleEnabled">Enabled</string>
    <string name="settingsToggleDisabled">Disabled</string>
    <string name="settingsCardPickupToggleBtnTitle">Show card pickup buttons (player action window):</string>
    <string name="settingsEndGamePlayedToggleBtnTitle">Show played train and station buttons (end game window):</string>
    <string name="settingsAutoNextPlayerToggleBtnTitle">Automatically go to next player:</string>
    <string name="settingsStationScoreTitle">"Set score per unused station:"</string>
    <string name="settingsStationScoreHint">"default"</string>
    <string name="settingsTrainThresholdTitle">"Set end game train threshold:"</string>
    <string name="settingsTrainThresholdHint">"default"</string>
    <string name="editPlayerDialogChangeName">"Change player name"</string>
    <string name="editPlayerDialogChangeNameHint">"Enter new player name"</string>
    <string name="editPlayerDialogChangeColour">"Select player colour"</string>
    <string-array name="editPlayerSpinnerColours">
        <item>"None"</item>
        <item>"Blue"</item>
        <item>"Red"</item>
        <item>"Green"</item>
        <item>"Yellow"</item>
        <item>"Black"</item>
    </string-array>
</resources>
