<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dialog_margin"
        android:paddingRight="@dimen/dialog_margin"
        android:paddingTop="@dimen/dialog_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/settingsCardPickupToggleBtnTitle" />

            <ToggleButton
                android:id="@+id/settingsCardPickupToggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/settingsToggleEnabled"
                android:textOff="@string/settingsToggleDisabled"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/settingsEndGamePlayedToggleBtnTitle" />

            <ToggleButton
                android:id="@+id/settingsEndGamePlayedToggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/settingsToggleEnabled"
                android:textOff="@string/settingsToggleDisabled"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/settingsAutoNextPlayerToggleBtnTitle" />

            <ToggleButton
                android:id="@+id/settingsChangePlayerToggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/settingsToggleEnabled"
                android:textOff="@string/settingsToggleDisabled"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/settingsStationScoreTitle" />

            <EditText
                android:id="@+id/settingsStationScoreEditTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                android:maxLength="2"
                android:hint="@string/settingsStationScoreHint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/settingsTrainThresholdTitle" />

            <EditText
                android:id="@+id/settingsTrainThresholdEditTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"
                android:maxLength="2"
                android:hint="@string/settingsTrainThresholdHint"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>