<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dialog_margin"
        android:paddingRight="@dimen/dialog_margin"
        android:paddingTop="@dimen/dialog_margin">

        <TextView
            android:id="@+id/summaryDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:text="@string/summaryDialogTitle"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginBottom="10dp" />

        <TableLayout
            android:id="@+id/summaryDialogTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1,2,3,4">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/summaryDialogTableHeadingName"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summaryDialogTableHeadingScore"
                    android:textStyle="bold"
                    android:gravity="end" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summaryDialogTableHeadingTrains"
                    android:textStyle="bold"
                    android:gravity="end" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summaryDialogTableHeadingStations"
                    android:textStyle="bold"
                    android:gravity="end" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>