<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="davgeo.github.tickettoridescoreboard.EndGameActivity">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/activity_player_action"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/endGameActivityTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/endGameActivityTitle"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp" >

                <Spinner
                    android:id="@+id/endGameSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/endGameActivityNextPlayerBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/endGameActivityNextPlayerBtn"
                    android:onClick="doNextPlayer" />
            </LinearLayout>

            <EditText
                android:id="@+id/endGameRouteScoreEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/endGameActivityRouteScoreHint"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp" >

                <Button
                    android:id="@+id/endGameActivityCompleteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/endGameActivityCompleteBtn"
                    android:backgroundTint="#FF00f800"
                    android:onClick="doRouteScore"
                    android:tag="1"/>

                <Button
                    android:id="@+id/endGameActivityIncompleteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/endGameActivityIncompleteBtn"
                    android:backgroundTint="#FFc61d1d"
                    android:onClick="doRouteScore"
                    android:tag="0"/>
            </LinearLayout>

            <TableLayout
                android:id="@+id/endGameScoreTable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1,2,3, 4"
                android:layout_marginBottom="20dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_span="4"
                        android:text="@string/endGameTableTitle"
                        android:textStyle="bold"
                        android:gravity="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:text="@string/endGameTableHeadingTrainScore"
                        android:textStyle="bold"
                        android:gravity="end" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/endGameTableHeadingStationScore"
                        android:textStyle="bold"
                        android:gravity="end" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/endGameTableHeadingRouteScore"
                        android:textStyle="bold"
                        android:gravity="end" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/endGameTableHeadingTotalScore"
                        android:textStyle="bold"
                        android:gravity="end" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/endGameTableTrainScoreValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:gravity="end" />

                    <TextView
                        android:id="@+id/endGameTableStationScoreValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end" />

                    <TextView
                        android:id="@+id/endGameTableRouteScoreValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end" />

                    <TextView
                        android:id="@+id/endGameTableTotalScoreValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/endGameActivityFinished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endGameActivityFinished"
                android:onClick="showFinalScores"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
